--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.22.2",
     "draft-js": "^0.11.7",
     "react": "^18.3.1",
+    "react-clock": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1",
