--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@souhaildev/reactemojis": "^1.0.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.2",
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
+    "emoji-picker-react": "^4.12.0",
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
