--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.2",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.1",
     "draft-js": "^0.11.7",
     "emoji-picker-react": "^4.12.0",
     "express": "^4.21.1",
     "moment": "^2.30.1",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
     "react-clock": "^5.1.0",
     "react-dom": "^18.3.1",
@@ -20,6 +24,9 @@
     "react-scripts": "^5.0.1",
     "router-dom": "^3.0.1",
     "sqlite3": "^5.1.7",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
