--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1",
+    "react-timer-hook": "^3.0.8",
     "router-dom": "^3.0.1",
     "sqlite3": "^5.1.7",
     "stream-browserify": "^3.0.0",
